feat: port saga implementations from Java to Go